# storage/api-docs/api-docs.json
@@ -56,7 +56,7 @@
                         }
                     },
                     {
-                        "name": "bedroom_count",
+                        "name": "bedroomCount",
                         "in": "query",
                         "description": "Bedroom count",
                         "required": false,
@@ -65,7 +65,7 @@
                         }
                     },
                     {
-                        "name": "bathroom_count",
+                        "name": "bathroomCount",
                         "in": "query",
                         "description": "Bathroom count",
                         "required": false,
@@ -74,7 +74,7 @@
                         }
                     },
                     {
-                        "name": "lot_size[min]",
+                        "name": "lotSize[min]",
                         "in": "query",
                         "description": "Minimum lot size",
                         "required": false,
@@ -83,7 +83,7 @@
                         }
                     },
                     {
-                        "name": "lot_size[max]",
+                        "name": "lotSize[max]",
                         "in": "query",
                         "description": "Maximum lot size",
                         "required": false,
@@ -92,7 +92,7 @@
                         }
                     },
                     {
-                        "name": "building_size[min]",
+                        "name": "buildingSize[min]",
                         "in": "query",
                         "description": "Minimum building size",
                         "required": false,
@@ -101,7 +101,7 @@
                         }
                     },
                     {
-                        "name": "building_size[max]",
+                        "name": "buildingSize[max]",
                         "in": "query",
                         "description": "Maximum building size",
                         "required": false,
@@ -125,7 +125,7 @@
                         }
                     },
                     {
-                        "name": "car_count",
+                        "name": "carCount",
                         "in": "query",
                         "description": "Car count",
                         "required": false,
@@ -134,7 +134,7 @@
                         }
                     },
                     {
-                        "name": "electric_power",
+                        "name": "electricPower",
                         "in": "query",
                         "description": "Electric Power",
                         "required": false,
@@ -151,8 +151,8 @@
                             "type": "string",
                             "enum": [
                                 "price",
-                                "bedroom_count",
-                                "lot_size"
+                                "bedroomCount",
+                                "lotSize"
                             ]
                         }
                     },
@@ -534,7 +534,7 @@
                         "type": "string",
                         "example": "Jono Doe"
                     },
-                    "phone_number": {
+                    "phoneNumber": {
                         "type": "string",
                         "example": "081111111111"
                     },
